--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   list-style: none;
   font-family: "Ubuntu", Courier, sans-serif;
@@ -6,13 +8,17 @@
 
 body {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   position: relative;
 }
 
 .header {
+  background: #fff;
   position: sticky;
+  top: 0;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  z-index: 2;
 }
 .header .menu {
   display: flex;
@@ -45,6 +51,7 @@ body {
   max-height: 70vh;
   -o-object-fit: cover;
      object-fit: cover;
+  position: relative;
 }
 .homepage__hero .homepage__hero__items {
   max-width: 920px;
@@ -68,54 +75,148 @@ body {
   background-color: #0a2d81;
   padding: 8px 20px;
 }
-.homepage__hero .homepage__hero__list-container {
-  position: absolute;
-  top: 600px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-}
-.homepage__hero .homepage__hero__list-container .homepage__hero__list {
+
+.list-container {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  margin-top: 20px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list .homepage__hero__item {
+.list-container .list-container__list {
+  display: flex;
+  gap: 10px;
+  z-index: 2;
+  max-width: 920px;
+}
+.list-container .list-container__list .list-container__item {
   background-position: bottom;
   height: 371px;
   width: 25%;
-  flex-basis: 17.5;
   transition: height 0.5s, margin 0.5s, background-position 0.5s ease;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item1 {
+.list-container .list-container__list #list-container__item1 {
   background-image: url(images/test_drive.jpeg);
   margin-top: 0;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item1:hover {
+.list-container .list-container__list #list-container__item1:hover {
   margin-top: -100px;
   height: 471px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item2 {
+.list-container .list-container__list #list-container__item2 {
   background-image: url(images/configurator.jpeg);
   margin-top: 45px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item2:hover {
+.list-container .list-container__list #list-container__item2:hover {
   margin-top: -100px;
   height: 515px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item3 {
+.list-container .list-container__list #list-container__item3 {
   background-image: url(images/clothes.jpeg);
   margin-top: 20px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item3:hover {
+.list-container .list-container__list #list-container__item3:hover {
   margin-top: -100px;
   height: 495px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item4 {
+.list-container .list-container__list #list-container__item4 {
   background-image: url(images/accesories.jpeg);
   margin-top: 43px;
 }
-.homepage__hero .homepage__hero__list-container .homepage__hero__list #homepage__hero__item4:hover {
+.list-container .list-container__list #list-container__item4:hover {
   margin-top: -100px;
   height: 515px;
+}
+
+.title {
+  text-align: center;
+  margin: 50px 0 40px 0;
+}
+.title .title__header-two {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 36px;
+}
+.title .title__paragraph {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.banner-grid {
+  max-width: 920px;
+  margin: 0 auto;
+}
+.banner-grid .banner-grid__list {
+  display: grid;
+  gap: 10px;
+}
+.banner-grid .banner-grid__list .banner-grid__item {
+  height: 260px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.banner-grid .banner-grid__list #banner-grid__item1 {
+  background-image: url(images/harmo.jpeg);
+}
+.banner-grid .banner-grid__list #banner-grid__item2 {
+  background-image: url(images/app_garage.png);
+}
+.banner-grid .banner-grid__list #banner-grid__item3 {
+  background-image: url(images/jamalube.jpeg);
+}
+.banner-grid .banner-grid__list #banner-grid__item4 {
+  background-image: url(images/service.jpeg);
+}
+.banner-grid .banner-grid__list #banner-grid__item5 {
+  background-image: url(images/start_good_habbits.png);
+}
+.banner-grid .banner-grid__list #banner-grid__item6 {
+  background-image: url(images/manual.jpeg);
+}
+
+footer {
+  background: #333335;
+}
+footer .footer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 920px;
+  margin: 20px auto;
+}
+footer .footer .footer__item {
+  flex-basis: calc((100% - 80px) / 5);
+}
+footer .footer .footer__item .footer__header-three {
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 30px;
+}
+footer .footer .footer__item * {
+  color: #afafaf;
+}
+
+@media (min-width: 1024px) {
+  .banner-grid__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .banner-grid__list .banner-grid__item {
+    background-color: grey;
+  }
+}
+@media (max-width: 914px) {
+  .menu__item {
+    display: none;
+  }
+}
+@media (min-width: 600px) {
+  .banner-grid__list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .banner-grid__list .banner-grid__item {
+    background-color: grey;
+  }
+  .banner-grid__list .banner-grid__grid-col-span-2 {
+    grid-column: span 2;
+  }
 }/*# sourceMappingURL=style.css.map */
