--- a/style.scss
+++ b/style.scss
@@ -1,18 +1,25 @@
 $main-color: #333335;
 $max-width: 1300px;
+$footer-text-color: #afafaf;
 * {
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   list-style: none;
   font-family: "Ubuntu", Courier, sans-serif;
 }
 body {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   position: relative;
 }
 .header {
+  background: #fff;
   position: sticky;
+  top: 0;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  z-index: 2;
 
   .menu {
     display: flex;
@@ -45,6 +52,7 @@ body {
   height: 70vh;
   max-height: 70vh;
   object-fit: cover;
+  position: relative;
   .homepage__hero__items {
     max-width: 920px;
     margin: 0 auto;
@@ -67,57 +75,152 @@ body {
       padding: 8px 20px;
     }
   }
-  .homepage__hero__list-container {
-    position: absolute;
-    top: 600px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    .homepage__hero__list {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
+}
+.list-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 
-      .homepage__hero__item {
-        background-position: bottom;
-        height: 371px;
-        width: 25%;
-        flex-basis: calc((100 - 3 * 10) / 4);
-        transition: height 0.5s, margin 0.5s, background-position 0.5s ease;
-      }
+  .list-container__list {
+    display: flex;
+    gap: 10px;
+    z-index: 2;
+    max-width: 920px;
+    .list-container__item {
+      background-position: bottom;
+      height: 371px;
+      width: 25%;
+      transition: height 0.5s, margin 0.5s, background-position 0.5s ease;
+    }
 
-      #homepage__hero__item1 {
-        background-image: url(images/test_drive.jpeg);
-        margin-top: 0;
+    #list-container__item1 {
+      background-image: url(images/test_drive.jpeg);
+      margin-top: 0;
+    }
+    #list-container__item1:hover {
+      margin-top: -100px;
+      height: 471px;
+    }
+    #list-container__item2 {
+      background-image: url(images/configurator.jpeg);
+      margin-top: 45px;
+    }
+    #list-container__item2:hover {
+      margin-top: -100px;
+      height: 515px;
+    }
+    #list-container__item3 {
+      background-image: url(images/clothes.jpeg);
+      margin-top: 20px;
+    }
+    #list-container__item3:hover {
+      margin-top: -100px;
+      height: 495px;
+    }
+    #list-container__item4 {
+      background-image: url(images/accesories.jpeg);
+      margin-top: 43px;
+    }
+    #list-container__item4:hover {
+      margin-top: -100px;
+      height: 515px;
+    }
+  }
+}
+.title {
+  text-align: center;
+  margin: 50px 0 40px 0;
+  .title__header-two {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .title__paragraph {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
+.banner-grid {
+  max-width: 920px;
+  margin: 0 auto;
+  .banner-grid__list {
+    display: grid;
+    gap: 10px;
+    .banner-grid__item {
+      height: 260px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    #banner-grid__item1 {
+      background-image: url(images/harmo.jpeg);
+      // background-position: center;
+      // object-fit: cover;
+    }
+    #banner-grid__item2 {
+      background-image: url(images/app_garage.png);
+    }
+    #banner-grid__item3 {
+      background-image: url(images/jamalube.jpeg);
+    }
+    #banner-grid__item4 {
+      background-image: url(images/service.jpeg);
+    }
+    #banner-grid__item5 {
+      background-image: url(images/start_good_habbits.png);
+    }
+    #banner-grid__item6 {
+      background-image: url(images/manual.jpeg);
+    }
+  }
+}
+footer {
+  background: $main-color;
+
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    max-width: 920px;
+    margin: 20px auto;
+    .footer__item {
+      flex-basis: calc((100% - 4 * 20px) / 5);
+      .footer__header-three {
+        margin-bottom: 10px;
+        font-size: 14px;
+        line-height: 30px;
       }
-      #homepage__hero__item1:hover {
-        margin-top: -100px;
-        height: 471px;
+      .footer__list-item {
       }
-      #homepage__hero__item2 {
-        background-image: url(images/configurator.jpeg);
-        margin-top: 45px;
-      }
-      #homepage__hero__item2:hover {
-        margin-top: -100px;
-        height: 515px;
-      }
-      #homepage__hero__item3 {
-        background-image: url(images/clothes.jpeg);
-        margin-top: 20px;
-      }
-      #homepage__hero__item3:hover {
-        margin-top: -100px;
-        height: 495px;
-      }
-      #homepage__hero__item4 {
-        background-image: url(images/accesories.jpeg);
-        margin-top: 43px;
-      }
-      #homepage__hero__item4:hover {
-        margin-top: -100px;
-        height: 515px;
-      }
+    }
+    .footer__item * {
+      color: $footer-text-color;
+    }
+  }
+}
+@media (min-width: 1024px) {
+  .banner-grid__list {
+    grid-template-columns: repeat(3, 1fr);
+    .banner-grid__item {
+      background-color: grey;
+    }
+  }
+}
+
+@media (max-width: 914px) {
+  .menu__item {
+    display: none;
+  }
+}
+@media (min-width: 600px) {
+  .banner-grid__list {
+    grid-template-columns: repeat(4, 1fr);
+    .banner-grid__item {
+      background-color: grey;
+    }
+    .banner-grid__grid-col-span-2 {
+      grid-column: span 2;
     }
   }
 }
